# FreightBrokerAI

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  fly.toml  main.py  pyproject.toml
db/init/: 001_schema.sql  002_seed_data.sql  003_events.sql  004_seed_data.sql  005_negotiation.sql  007_alter_table_negotiation.sql  008_seed_negotiation.sql
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/assets/: LoadCard.tsx  NegotiationChat.tsx
src/: analytics.py  app.py  db_client.py  migrate.py  webhook_api.py
